# time-tracker

./: .dockerignore  .env  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
data/: time_tracker.db
docs/: DOCKER.md  SECRETS.md
src/: config.py  main.py
src/database/: db.py
src/messaging/: bot.py
src/models/: activity.py  time_slot.py
tests/: conftest.py
tests/integration/: test_database.py
tests/unit/: test_activity.py  test_time_slot.py
