[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-tracker"
version = "0.1.0"
description = "Telegram bot for time tracking"
authors = [
    {name = "Developer", email = "dev@example.com"},
]
requires-python = ">=3.7"
dependencies = [
    "requests",
    "python-dotenv",
    "pytest",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]

dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "mypy",
]

[project.scripts]
time-tracker = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
python_paths = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
sources = ["src"]

[tool.ruff]
line-length = 88

target-version = "py37"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["time_tracker"]
